--- a/toss-clone/src/App.css
+++ b/toss-clone/src/App.css
@@ -1,10 +1,25 @@
 .App {
   text-align: center;
+  min-width: 400px;
+  max-width: 400px;
+  margin: 0 auto;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 40px;
+  margin-top: 40px;
+  border: 1px solid black;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  background-color: #ffffff;
+}
+* {
+  font-size: 16px;
+  border: 0;
+}
+p {
+  margin: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
